--- a/discount.html
+++ b/discount.html
@@ -90,7 +90,7 @@
                             <option value="2">Номер картки</option>
                             <option value="3">Номер телефону</option>
                         </select>
-                        <input class="btn_shape" type="text" id="search_area">
+                        <input class="btn_shape" type="text" id="search_area" readonly>
                         <span><br>Клієнт:</span>
                         <select class="btn_shape" id="search_results">
                             <option>Іванов Іван (АТБмаркет) 5%</option>
