--- a/handle_discount.html
+++ b/handle_discount.html
@@ -79,7 +79,7 @@
                             <option value="3">продукт 2</option>
                         </select>
                         <span>Введіть знижку:</span>
-                        <input type="text" id="discount_value" class="btn_shape">
+                        <input type="text" id="discount_value" class="btn_shape" readonly>
                         <select id="discount_type" class="btn_shape">
                             <option>%</option>
                             <option>Грн</option>
